--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <div class="container">
         <h1>ゴルフコンペ開催！</h1>
-       <img src="https://raw.githubusercontent.com/Yoshi-100/.github.io/main/your-image-name.jpg" alt="ゴルフコンペイメージ">
+       <img src="https://raw.githubusercontent.com/Yoshi-100/.github.io/main/画像2.jpg" alt="ゴルフコンペイメージ">
         <div class="buttons">
             <button onclick="showRegistration()">参加</button>
             <button onclick="decline()">不参加</button>
