--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>以下4枚の写真を古い順に選択してください！</h2>
         <div class="photo-container">
             <div class="photo">
-                <img src="path_to_photo_A.jpg" alt="写真A">
+                <img src="写真A.jpg" alt="写真A">
                 <select id="selectA">
                     <option value="">選択してください</option>
                     <option value="1">1</option>
@@ -81,7 +81,7 @@
                 </select>
             </div>
             <div class="photo">
-                <img src="path_to_photo_B.jpg" alt="写真B">
+                <img src="写真B.jpg" alt="写真B">
                 <select id="selectB">
                     <option value="">選択してください</option>
                     <option value="1">1</option>
@@ -91,7 +91,7 @@
                 </select>
             </div>
             <div class="photo">
-                <img src="path_to_photo_C.jpg" alt="写真C">
+                <img src="写真C.jpg" alt="写真C">
                 <select id="selectC">
                     <option value="">選択してください</option>
                     <option value="1">1</option>
@@ -101,7 +101,7 @@
                 </select>
             </div>
             <div class="photo">
-                <img src="path_to_photo_D.jpg" alt="写真D">
+                <img src="写真D.jpg" alt="写真D">
                 <select id="selectD">
                     <option value="">選択してください</option>
                     <option value="1">1</option>
